--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       <button>Easy</button>
       <button>Hard</button>
     </div>
+    <div class="container">
+      <button class="square"></button>
+      <button class="square"></button>
+      <button class="square"></button>
+      <button class="square"></button>
+      <button class="square"></button>
+      <button class="square"></button>
+    </div>
 
     <script src="myGame.js"></script>
   </body>
