--- a/index.html
+++ b/index.html
@@ -3,21 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="myGame.css" />
+    <script src="myGame.js"></script>
     <title>myGame</title>
   </head>
   <body>
     <h1>My Game</h1>
-    <div id="strip">
-      <button>New Color</button>
-      <button>Easy</button>
-      <button>Hard</button>
+    <div id="stripe">
+      <button id="reset">New Color</button>
+      <button id="mode">Easy</button>
+      <button class="selected" id="mode">Hard</button>
     </div>
     <div class="container">
       <button class="square"></button>
@@ -27,7 +22,5 @@
       <button class="square"></button>
       <button class="square"></button>
     </div>
-
-    <script src="myGame.js"></script>
   </body>
 </html>
