easy removes 3 squares

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="myGame.css" />
-    <script src="myGame.js"></script>
     <title>myGame</title>
   </head>
   <body>
-    <h1>My Game</h1>
+    <h1>
+      My Game
+      <br />
+      <span id="RGB">RGB</span>
+      <br />
+    </h1>
     <div id="stripe">
       <button id="reset">New Color</button>
       <button id="mode">Easy</button>
@@ -22,5 +26,6 @@
       <button class="square"></button>
       <button class="square"></button>
     </div>
+    <script src="myGame.js"></script>
   </body>
 </html>
