--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <br />
       <span id="RGB">RGB</span>
       <br />
+      <span id="targetColor"></span>
     </h1>
     <div id="stripe">
       <button id="reset">New Color</button>
