--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="myGame.css" />
-    <title>myGame</title>
+    <title>Color Game</title>
+    <link rel="stylesheet" type="text/css" href="myGame.css" />
   </head>
   <body>
     <h1>
-      My Game
+      The Great
       <br />
-      <span id="RGB">RGB</span>
+      <span id="colorDisplay">RGB</span>
       <br />
-      <span id="targetColor"></span>
+      Color Game
     </h1>
+
     <div id="stripe">
-      <button id="reset">New Color</button>
-      <button id="mode">Easy</button>
-      <button class="selected" id="mode">Hard</button>
+      <button id="reset">New Colors</button>
+      <span id="message"></span>
+      <button class="mode">Easy</button>
+      <button class="mode selected">Hard</button>
     </div>
-    <div class="container">
-      <button class="square"></button>
-      <button class="square"></button>
-      <button class="square"></button>
-      <button class="square"></button>
-      <button class="square"></button>
-      <button class="square"></button>
+
+    <div id="container">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
     </div>
-    <script src="myGame.js"></script>
+
+    <script type="text/javascript" src="myGame.js"></script>
   </body>
 </html>
